--- a/examples/CaOH_blue_MOT_example_Christian/CaOH_BlueMOT_Figure1/misc/CaOH_SFcooling.ipynb
+++ b/examples/CaOH_blue_MOT_example_Christian/CaOH_BlueMOT_Figure1/misc/CaOH_SFcooling.ipynb
@@ -4036,15 +4036,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.5",
+   "display_name": "Julia 1.12.0-rc1",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.5"
+   "version": "1.12.0"
   }
  },
  "nbformat": 4,
